--- a/TestProjects/Android-Support/Fragments/Example.Droid/Resources/layout/fragment_recyclerview.axml
+++ b/TestProjects/Android-Support/Fragments/Example.Droid/Resources/layout/fragment_recyclerview.axml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
+    xmlns:local="http://schemas.android.com/apk/lib/example.droid"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <MvvmCross.Droid.Support.V4.MvxSwipeRefreshLayout
@@ -30,6 +31,5 @@
         android:layout_gravity="bottom|right"
         local:elevation="4dp"
         local:backgroundTint="@color/colorPrimary"
-        local:rippleColor="@color/colorPrimaryDark"
-        local:layout_behavior="@string/view_scroll_translation_autohide_behavior" />
+        local:rippleColor="@color/colorPrimaryDark" />
 </android.support.design.widget.CoordinatorLayout>
